--- a/HRApi/src/HRApi/VIews/Auth/Login.cshtml
+++ b/HRApi/src/HRApi/VIews/Auth/Login.cshtml
@@ -16,11 +16,19 @@
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Password"></label>
                 <input type="password" asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password"></span>
             </div>
+
+            <div class="checkbox" >
+                <label><input
+                              type="checkbox" > Remember me
+                </label>
+                
+            </div>    
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-lg btn-success" />
             </div>
