--- a/HRApi/src/HRApi/VIews/Auth/Login.cshtml
+++ b/HRApi/src/HRApi/VIews/Auth/Login.cshtml
@@ -1,10 +1,10 @@
 ﻿@model HRApi.ViewModels.LoginViewModel
-@{ 
+@{
     ViewBag.Title = "Login";
 }
 @section Scripts {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"></script>
 }
 <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
@@ -23,14 +23,23 @@
                 <span asp-validation-for="Password"></span>
             </div>
 
-            <div class="checkbox" >
-                <label><input
-                              type="checkbox" > Remember me
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox"> Remember me
                 </label>
-                
-            </div>    
+            </div>
+
             <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-lg btn-success" />
+
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a asp-action="Logout" asp-controller="Auth">Logout</a>
+                }
+                else
+                {
+                    <input type="submit" value="Login" class="btn btn-lg btn-success" />
+                }
+
             </div>
         </form>
     </div>
