--- a/HRApi/src/HRApi/VIews/Account/ExternalLoginConfirmation.cshtml
+++ b/HRApi/src/HRApi/VIews/Account/ExternalLoginConfirmation.cshtml
@@ -24,6 +24,20 @@
         </div>
     </div>
     <div class="form-group">
+        <label asp-for="FirstName" class="col-md-2 control-label">First name</label>
+        <div class="col-md-10">
+            <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="LastName" class="col-md-2 control-label">Last name</label>
+        <div class="col-md-10">
+            <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <button type="submit" class="btn btn-default">Register</button>
         </div>
