--- a/HRApi/src/HRApi/VIews/General/Job/Create.cshtml
+++ b/HRApi/src/HRApi/VIews/General/Job/Create.cshtml
@@ -1,4 +1,4 @@
-@model HRApi.Models.Job
+﻿@model HRApi.Models.Job
 
 @{
     ViewData["Title"] = "Create";
@@ -90,3 +90,5 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
