--- a/HRApi/src/HRApi/VIews/General/Job/Index.cshtml
+++ b/HRApi/src/HRApi/VIews/General/Job/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<HRApi.Models.Job>
+﻿@model IEnumerable<HRApi.Models.Job>
 
 @{
     ViewData["Title"] = "Jobs";
@@ -12,9 +12,9 @@
         Title: @Html.TextBox("SearchString") <br />
     </p>
 
-        <p>
-            <input type="submit" value="Search" />
-        </p>
+    <p>
+        <input type="submit" value="Search" />
+    </p>
 }
 
 <p>
