--- a/HRApi/src/HRApi/VIews/BackOffice/Company/Create.cshtml
+++ b/HRApi/src/HRApi/VIews/BackOffice/Company/Create.cshtml
@@ -10,52 +10,51 @@
 <form asp-action="Create">
     <div class="form-horizontal">
         <h4>Company</h4>
-        <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="CompanyName" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyName" class="col-md-2 control-label">Name</label>
             <div class="col-md-10">
                 <input asp-for="CompanyName" class="form-control" />
                 <span asp-validation-for="CompanyName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CompanyDesc" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyDesc" class="col-md-2 control-label">Description</label>
             <div class="col-md-10">
                 <input asp-for="CompanyDesc" class="form-control" />
                 <span asp-validation-for="CompanyDesc" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CompanyCity" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyCity" class="col-md-2 control-label">City</label>
             <div class="col-md-10">
                 <input asp-for="CompanyCity" class="form-control" />
                 <span asp-validation-for="CompanyCity" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CompanyCountry" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyCountry" class="col-md-2 control-label">Country</label>
             <div class="col-md-10">
                 <input asp-for="CompanyCountry" class="form-control" />
                 <span asp-validation-for="CompanyCountry" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CompanyPhone" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyPhone" class="col-md-2 control-label">Phone number</label>
             <div class="col-md-10">
                 <input asp-for="CompanyPhone" class="form-control" />
                 <span asp-validation-for="CompanyPhone" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CompanyEmail" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyEmail" class="col-md-2 control-label">Email</label>
             <div class="col-md-10">
                 <input asp-for="CompanyEmail" class="form-control" />
                 <span asp-validation-for="CompanyEmail" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CompanyWebSite" class="col-md-2 control-label"></label>
+            <label asp-for="CompanyWebSite" class="col-md-2 control-label">Web site</label>
             <div class="col-md-10">
                 <input asp-for="CompanyWebSite" class="form-control" />
                 <span asp-validation-for="CompanyWebSite" class="text-danger"></span>
