--- a/HRApi/src/HRApi/VIews/BackOffice/Company/Index.cshtml
+++ b/HRApi/src/HRApi/VIews/BackOffice/Company/Index.cshtml
@@ -1,14 +1,14 @@
 @model IEnumerable<HRApi.Models.Company>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Companies";
     Layout = "~/VIews/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Companies</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create a company</a>
 </p>
 <table class="table">
     <thead>
@@ -21,9 +21,6 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.CompanyCity)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CompanyCountry)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.CompanyPhone)
@@ -48,9 +45,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CompanyCity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CompanyCountry)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CompanyPhone)
