--- a/HRApi/src/HRApi/VIews/BackOffice/Job/Edit.cshtml
+++ b/HRApi/src/HRApi/VIews/BackOffice/Job/Edit.cshtml
@@ -14,63 +14,63 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="JobId" />
         <div class="form-group">
-            <label asp-for="JobName" class="col-md-2 control-label"></label>
+            <label asp-for="JobName" class="col-md-2 control-label">Name</label>
             <div class="col-md-10">
                 <input asp-for="JobName" class="form-control" />
                 <span asp-validation-for="JobName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobDesc" class="col-md-2 control-label"></label>
+            <label asp-for="JobDesc" class="col-md-2 control-label">Description</label>
             <div class="col-md-10">
                 <input asp-for="JobDesc" class="form-control" />
                 <span asp-validation-for="JobDesc" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobCity" class="col-md-2 control-label"></label>
+            <label asp-for="JobCity" class="col-md-2 control-label">City</label>
             <div class="col-md-10">
                 <input asp-for="JobCity" class="form-control" />
                 <span asp-validation-for="JobCity" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobCountry" class="col-md-2 control-label"></label>
+            <label asp-for="JobCountry" class="col-md-2 control-label">Country</label>
             <div class="col-md-10">
                 <input asp-for="JobCountry" class="form-control" />
                 <span asp-validation-for="JobCountry" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobPartFull" class="col-md-2 control-label"></label>
+            <label asp-for="JobPartFull" class="col-md-2 control-label">Full/Part time</label>
             <div class="col-md-10">
                 <select asp-for="JobPartFull" class="form-control"></select>
                 <span asp-validation-for="JobPartFull" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobKeyword" class="col-md-2 control-label"></label>
+            <label asp-for="JobKeyword" class="col-md-2 control-label">Keywords</label>
             <div class="col-md-10">
                 <input asp-for="JobKeyword" class="form-control" />
                 <span asp-validation-for="JobKeyword" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobCategories" class="col-md-2 control-label"></label>
+            <label asp-for="JobCategories" class="col-md-2 control-label">Categories</label>
             <div class="col-md-10">
                 <input asp-for="JobCategories" class="form-control" />
                 <span asp-validation-for="JobCategories" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobReqXp" class="col-md-2 control-label"></label>
+            <label asp-for="JobReqXp" class="col-md-2 control-label">Required experience</label>
             <div class="col-md-10">
                 <input asp-for="JobReqXp" class="form-control" />
                 <span asp-validation-for="JobReqXp" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobSalary" class="col-md-2 control-label"></label>
+            <label asp-for="JobSalary" class="col-md-2 control-label">Salary</label>
             <div class="col-md-10">
                 <input asp-for="JobSalary" class="form-control" />
                 <span asp-validation-for="JobSalary" class="text-danger"></span>
