--- a/HRApi/src/HRApi/VIews/BackOffice/User/Index.cshtml
+++ b/HRApi/src/HRApi/VIews/BackOffice/User/Index.cshtml
@@ -1,11 +1,11 @@
 @model IEnumerable<HRApi.Models.RegUser>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Users";
     Layout = "~/VIews/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Users</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -26,31 +26,7 @@
                 @Html.DisplayNameFor(model => model.RegUserCity)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RegUserCountry)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LocationChange)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegUserPartFull)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.WorkXp)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegUserKeyword)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegUserSex)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegUserDoB)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.statusOfUser)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegUserAdditionalInfo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -63,10 +39,10 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RegUserName)
+                    @Html.DisplayFor(modelItem => item.UserName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.statusOfUser)
+                    @Html.DisplayFor(modelItem => item.RegUserName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.RegUserLastName)
@@ -75,33 +51,10 @@
                     @Html.DisplayFor(modelItem => item.RegUserCity)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RegUserCountry)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LocationChange)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegUserPartFull)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.WorkXp)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RegUserKeyword)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegUserSex)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegUserDoB)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.Email)
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegUserAdditionalInfo)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
