--- a/HRApi/src/HRApi/VIews/General/Job/Delete.cshtml
+++ b/HRApi/src/HRApi/VIews/General/Job/Delete.cshtml
@@ -1,12 +1,13 @@
-@model HRApi.Models.Job
+﻿@model HRApi.Models.Job
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
     Layout = "~/VIews/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Job</h4>
     <hr />
@@ -66,9 +67,11 @@
             @Html.DisplayFor(model => model.JobSalary)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.JobId">Edit</a> |
-    <a asp-action="Delete" asp-route-id="@Model.JobId">Delete</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <form asp-action="Delete">
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <a asp-action="Index">Back to List</a>
+        </div>
+    </form>
 </div>
