--- a/HRApi/src/HRApi/VIews/General/Job/Edit.cshtml
+++ b/HRApi/src/HRApi/VIews/General/Job/Edit.cshtml
@@ -1,17 +1,18 @@
-@model HRApi.Models.Job
+﻿@model HRApi.Models.Job
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     Layout = "~/VIews/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-<form asp-action="Create">
+<form asp-action="Edit">
     <div class="form-horizontal">
         <h4>Job</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="JobId" />
         <div class="form-group">
             <label asp-for="JobName" class="col-md-2 control-label">Name</label>
             <div class="col-md-10">
@@ -20,7 +21,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobDesc" class="col-md-2 control-label">Descrition</label>
+            <label asp-for="JobDesc" class="col-md-2 control-label">Description</label>
             <div class="col-md-10">
                 <input asp-for="JobDesc" class="form-control" />
                 <span asp-validation-for="JobDesc" class="text-danger"></span>
@@ -41,7 +42,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="JobPartFull" class="col-md-2 control-label">Full/Part Time</label>
+            <label asp-for="JobPartFull" class="col-md-2 control-label">Full/Part time</label>
             <div class="col-md-10">
                 <select asp-for="JobPartFull" class="form-control"></select>
                 <span asp-validation-for="JobPartFull" class="text-danger"></span>
@@ -77,7 +78,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
