--- a/HRApi/src/HRApi/VIews/General/Job/Delete.cshtml
+++ b/HRApi/src/HRApi/VIews/General/Job/Delete.cshtml
@@ -68,7 +68,7 @@
         </dd>
     </dl>
 
-    <form asp-action="Delete">
+    <form asp-action="DeleteConfirmed">
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             <a asp-action="Index">Back to List</a>
